--- a/Rohoel/.env
+++ b/Rohoel/.env
@@ -1,7 +1,5 @@
-API_KEY=XXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
-BASE_URL = "https://www.alphavantage.co/query?function=BRENT&interval=daily"
-LONGITUDE = 8.468
-LATITUDE = 49.448
+API_KEY="XXXXXXXXXXXXXXXX"        
+BASE_URL = "https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol=USOI&interval=5min"
 
 MONGO_URL = "mongodb://user:pass@mongodb:27017/"
 MONGO_DB_NAME = "BDA"
